--- a/package.json
+++ b/package.json
@@ -6,10 +6,17 @@
   "main": "dist/index.js",
   "scripts": {
     "dev": "tsx watch src/index.ts",
-    "build": "tsc",
+    "build": "tsc && npm run build:css",
+    "build:css": "tailwindcss -i ./public/css/style.css -o ./public/css/output.css --watch",
     "start": "node dist/index.js",
     "clean": "rm -rf dist",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "lint": "biome lint .",
+    "lint:fix": "biome lint --write .",
+    "format": "biome format --write .",
+    "format:check": "biome format .",
+    "check": "biome check .",
+    "check:fix": "biome check --write ."
   },
   "keywords": [
     "typescript",
@@ -19,8 +26,13 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "@biomejs/biome": "^2.2.4",
     "@types/express": "^5.0.3",
+    "@types/morgan": "^1.9.9",
     "@types/node": "^20.8.0",
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3",
     "tsx": "^3.14.0",
     "typescript": "^5.2.0"
   },
@@ -28,6 +40,9 @@
     "node": ">=18.0.0"
   },
   "dependencies": {
-    "express": "^5.1.0"
+    "daisyui": "^4.11.1",
+    "ejs": "^3.1.10",
+    "express": "^5.1.0",
+    "morgan": "^1.10.0"
   }
 }
