--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "main": "dist/index.js",
   "scripts": {
     "dev": "tsx watch src/index.ts",
-    "build": "tsc && npm run build:css",
-    "build:css": "tailwindcss -i ./public/css/style.css -o ./public/css/output.css --watch",
+    "build": "tsc",
     "start": "node dist/index.js",
     "clean": "rm -rf dist",
     "type-check": "tsc --noEmit",
@@ -28,11 +27,7 @@
   "devDependencies": {
     "@biomejs/biome": "^2.2.4",
     "@types/express": "^5.0.3",
-    "@types/morgan": "^1.9.9",
     "@types/node": "^20.8.0",
-    "autoprefixer": "^10.4.19",
-    "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.3",
     "tsx": "^3.14.0",
     "typescript": "^5.2.0"
   },
@@ -40,9 +35,6 @@
     "node": ">=18.0.0"
   },
   "dependencies": {
-    "daisyui": "^4.11.1",
-    "ejs": "^3.1.10",
-    "express": "^5.1.0",
-    "morgan": "^1.10.0"
+    "express": "^5.1.0"
   }
 }
