added vitest, added tests ti ci pipeline, and made conversations dir and md files

--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -32,3 +32,5 @@ jobs:
         
       - name: Run Biome full check
         run: npm run check
+      - name: run tests
+        run: npm run test:run
