--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '18'
+          node-version: '20'
           cache: 'npm'
           
       - name: Install dependencies
@@ -32,3 +32,5 @@ jobs:
         
       - name: Run Biome full check
         run: npm run check
+      - name: run tests
+        run: npm run test:run
