--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@biomejs/biome": "^2.2.4",
     "@types/express": "^5.0.3",
     "@types/node": "^20.8.0",
+    "@types/nunjucks": "^3.2.6",
     "@vitest/coverage-v8": "^3.2.4",
     "tsx": "^4.20.6",
     "typescript": "^5.2.0",
@@ -41,6 +42,7 @@
     "node": ">=18.0.0"
   },
   "dependencies": {
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "nunjucks": "^3.2.4"
   }
 }
