--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/express": "^5.0.3",
     "@types/node": "^20.8.0",
     "@vitest/coverage-v8": "^3.2.4",
+    "daisyui": "^5.1.26",
     "tsx": "^4.20.6",
     "typescript": "^5.2.0",
     "vitest": "^3.2.4"
@@ -41,6 +42,8 @@
     "node": ">=18.0.0"
   },
   "dependencies": {
-    "express": "^5.1.0"
+    "@tailwindcss/vite": "^4.1.13",
+    "express": "^5.1.0",
+    "tailwindcss": "^4.1.13"
   }
 }
