--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/node": "^20.8.0",
     "@types/nunjucks": "^3.2.6",
     "@vitest/coverage-v8": "^3.2.4",
+    "daisyui": "^5.1.26",
     "tsx": "^4.20.6",
     "typescript": "^5.2.0",
     "vitest": "^3.2.4"
@@ -42,7 +43,9 @@
     "node": ">=18.0.0"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.13",
     "express": "^5.1.0",
-    "nunjucks": "^3.2.4"
+    "nunjucks": "^3.2.4",
+    "tailwindcss": "^4.1.13"
   }
 }
