feat(styles): integrate Tailwind CSS and DaisyUI
- Add Tailwind CSS configuration with DaisyUI plugin
- Create main.css with Tailwind directives and custom styles
- Update package.json with Tailwind CSS build scripts
- Replace separate CSS files with unified Tailwind build
- Update views to use new CSS structure
- Configure Biome to ignore Tailwind directives
- Add dist and generated CSS files to .gitignore

--- a/biome.json
+++ b/biome.json
@@ -40,7 +40,8 @@
       "suspicious": {
         "noExplicitAny": "warn",
         "noArrayIndexKey": "warn",
-        "noConfusingVoidType": "warn"
+        "noConfusingVoidType": "warn",
+        "noUnknownAtRules": "off"
       },
       "performance": {
         "noDelete": "error"
