chore: ignore public folder and remove tracked CSS file
- Update .gitignore to explicitly ignore public/ folder
- Remove public/css/style.css from git tracking
- CSS file is now generated by Tailwind build process

--- a/.gitignore
+++ b/.gitignore
@@ -81,7 +81,8 @@ dist
 
 # Gatsby files
 .cache/
-public
+# Public folder - contains generated/built assets
+public/
 
 # Vuepress build output
 .vuepress/dist
