--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "node": ">=18.0.0"
   },
   "dependencies": {
+    "axios": "^1.12.2",
     "express": "^5.1.0",
     "nunjucks": "^3.2.4"
   }
