--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "license": "MIT",
   "devDependencies": {
     "@biomejs/biome": "^2.2.4",
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/node": "^20.8.0",
     "@types/nunjucks": "^3.2.6",
@@ -49,6 +50,8 @@
   "dependencies": {
     "@types/axios": "^0.9.36",
     "axios": "^1.12.2",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "nunjucks": "^3.2.4"
   }
