fix: resolve biome linting errors
- Disable noImportantStyles rule in biome.json (needed for DaisyUI theme overrides)
- Remove duplicate unused ApiResponse interface in jobRoleApiService.ts
- All biome checks now pass successfully

--- a/biome.json
+++ b/biome.json
@@ -35,7 +35,8 @@
       "complexity": {
         "noExtraBooleanCast": "error",
         "noUselessCatch": "error",
-        "noUselessTypeConstraint": "error"
+        "noUselessTypeConstraint": "error",
+        "noImportantStyles": "off"
       },
       "suspicious": {
         "noExplicitAny": "warn",
