--- a/.gitignore
+++ b/.gitignore
@@ -90,6 +90,7 @@ public/
 !public/css/
 !public/fonts/
 public/fonts/README.md
+public/fonts/**/.DS_Store
 
 # Vuepress build output
 .vuepress/dist
