added google analytics

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,11 @@ PORT=3000
 
 # Backend API Configuration
 BACKEND_URL=http://localhost:3001/api
+
+# Google Analytics Configuration
+# Get your Property ID from Google Analytics: Admin → Property Settings
+GA4_PROPERTY_ID=your-property-id-here
+
+# Path to your Google Cloud service account JSON key file
+# After creating a service account, download the JSON key and place it in ./credentials/
+GOOGLE_APPLICATION_CREDENTIALS=./credentials/service-account-key.json
