--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "node": ">=18.0.0"
   },
   "dependencies": {
+    "@google-analytics/data": "^5.2.1",
     "@types/axios": "^0.9.36",
     "@types/form-data": "^2.2.1",
     "@types/multer": "^2.0.0",
