Added loads of testing stuff

--- a/.gitignore
+++ b/.gitignore
@@ -178,3 +178,10 @@ credentials/
 !biome.json
 !tailwind.config.js
 !locales/**/*.json
+
+# Playwright
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
+/playwright/.auth/
