--- a/package.json
+++ b/package.json
@@ -5,23 +5,20 @@
   "type": "module",
   "main": "dist/index.js",
   "scripts": {
+  "serve:reports": "npx serve ./public --single --listen 5000",
     "dev": "concurrently \"npm run build:css\" \"tsx watch src/index.ts\"",
     "build": "npm run build:css:prod && tsc",
-    "build:css": "tailwindcss -i ./src/styles/main.css -o ./public/css/style.css --watch",
     "build:css:prod": "tailwindcss -i ./src/styles/main.css -o ./public/css/style.css --minify",
     "start": "node dist/index.js",
+    "test": "vitest",
+    "check": "biome check .",
+    "lint": "biome lint .",
+    "format": "biome format --write .",
     "clean": "rm -rf dist && rm -f public/css/style.css",
     "type-check": "tsc --noEmit",
-    "test": "vitest",
-    "test:run": "vitest run",
-    "test:ui": "vitest --ui",
+    "test:unit": "vitest run",
     "test:coverage": "vitest run --coverage",
-    "lint": "biome lint .",
-    "lint:fix": "biome lint --write .",
-    "format": "biome format --write .",
-    "format:check": "biome format .",
-    "check": "biome check .",
-    "check:fix": "biome check --write ."
+    "test:e2e": "playwright test"
   },
   "keywords": [
     "typescript",
@@ -32,6 +29,9 @@
   "license": "MIT",
   "devDependencies": {
     "@biomejs/biome": "^2.2.4",
+    "@cucumber/cucumber": "^12.2.0",
+    "@cucumber/pretty-formatter": "^2.4.1",
+    "@playwright/test": "^1.56.1",
     "@types/cookie-parser": "^1.4.9",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
@@ -40,6 +40,7 @@
     "@vitest/coverage-v8": "^3.2.4",
     "concurrently": "^9.2.1",
     "daisyui": "^5.1.26",
+    "playwright": "^1.56.1",
     "tailwindcss": "^3.4.18",
     "tsx": "^4.20.6",
     "typescript": "^5.2.0",
