--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "type": "module",
   "main": "dist/index.js",
   "scripts": {
-  "serve:reports": "npx serve ./public --single --listen 5000",
+    "serve:reports": "npx serve ./public --single --listen 5000",
     "dev": "concurrently \"npm run build:css\" \"tsx watch src/index.ts\"",
     "build": "npm run build:css:prod && tsc",
     "build:css:prod": "tailwindcss -i ./src/styles/main.css -o ./public/css/style.css --minify",
     "start": "node dist/index.js",
     "test": "vitest",
     "check": "biome check .",
+    "check:fix": "biome lint --write .",
     "lint": "biome lint .",
     "format": "biome format --write .",
     "clean": "rm -rf dist && rm -f public/css/style.css",
@@ -29,8 +30,6 @@
   "license": "MIT",
   "devDependencies": {
     "@biomejs/biome": "^2.2.4",
-    "@cucumber/cucumber": "^12.2.0",
-    "@cucumber/pretty-formatter": "^2.4.1",
     "@playwright/test": "^1.56.1",
     "@types/cookie-parser": "^1.4.9",
     "@types/cors": "^2.8.19",
