--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "check:fix": "biome lint --write .",
     "lint": "biome lint .",
     "format": "biome format --write .",
+    "format:check": "biome format .",
     "clean": "rm -rf dist && rm -f public/css/style.css",
     "type-check": "tsc --noEmit",
     "test:unit": "vitest run",
