--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -42,3 +42,23 @@ jobs:
       
       - name: Tag docker image
         run: docker tag team1-job-app-frontend aiacademy25-bbaue6bgenhkd0dj.azurecr.io/team1-job-app-frontend:v${{ steps.version.outputs.VERSION }}
+      
+      # - name: Login to Azure Container Registry
+      #   uses: docker/login-action@v3
+      #   with:
+      #     registry: aiacademy25-bbaue6bgenhkd0dj.azurecr.io
+      #     username: ${{ vars.ACR_USERNAME }}
+      #     password: ${{ secrets.ACR_PASSWORD }}
+      
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+      
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      
+      - name: Build and push
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          push: false
+          tags: aiacademy25-bbaue6bgenhkd0dj.azurecr.io/team1-job-app-frontend:v${{ steps.version.outputs.VERSION }}
