--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -2,7 +2,7 @@ name: Code Quality Checks
 
 on:
   push:
-    branches: [ main, develop ]
+    branches: [ "**" ]
   pull_request:
     branches: [ main, develop ]
 
@@ -38,11 +38,12 @@ jobs:
         run: echo "VERSION=$(jq -r '.version' package.json)" >> $GITHUB_OUTPUT
       
       # - name: Login to Azure Container Registry
+      #   if: github.ref == 'refs/heads/main' && github.event_name == 'push'
       #   uses: docker/login-action@v3
       #   with:
       #     registry: aiacademy25-bbaue6bgenhkd0dj.azurecr.io
-          # username: ${{ vars.ACR_USERNAME }}
-          # password: ${{ secrets.ACR_PASSWORD }}
+      #     username: ${{ vars.ACR_USERNAME }}
+      #     password: ${{ secrets.ACR_PASSWORD }}
       
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
@@ -51,5 +52,5 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           context: .
-          push: false
+          push: ${{ github.ref == 'refs/heads/main' && github.event_name == 'push' }}
           tags: aiacademy25-bbaue6bgenhkd0dj.azurecr.io/team1-job-app-frontend:v${{ steps.version.outputs.VERSION }}
