--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -37,13 +37,10 @@ jobs:
         id: version
         run: echo "VERSION=$(jq -r '.version' package.json)" >> $GITHUB_OUTPUT
       
-      # - name: Login to Azure Container Registry
-      #   if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-      #   uses: docker/login-action@v3
-      #   with:
-      #     registry: aiacademy25-bbaue6bgenhkd0dj.azurecr.io
-      #     username: ${{ vars.ACR_USERNAME }}
-      #     password: ${{ secrets.ACR_PASSWORD }}
+      - name: Azure login
+        uses: azure/login@v2
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
       
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
