--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -32,7 +32,14 @@ jobs:
         
       - name: Run Biome full check
         run: npm run check
-      
+  build-docker:
+    name: Build and Push Docker Image
+    runs-on: ubuntu-latest
+    needs: biome 
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        
       - name: Extract version
         id: version
         run: echo "VERSION=$(jq -r '.version' package.json)" >> $GITHUB_OUTPUT
