--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -39,7 +39,7 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-        
+
       - name: Extract version
         id: version
         run: echo "VERSION=$(jq -r '.version' package.json)" >> $GITHUB_OUTPUT
@@ -57,4 +57,4 @@ jobs:
         with:
           context: .
           push: ${{ github.ref == 'refs/heads/main' && github.event_name == 'push' }}
-          tags: aiacademy25-bbaue6bgenhkd0dj.azurecr.io/team1-job-app-frontend:v${{ steps.version.outputs.VERSION }}
+          tags: aiacademy25-bbaue6bgenhkd0dj.azurecr.io/${{github.repository}}:v${{ steps.version.outputs.VERSION }}
