--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -148,9 +148,9 @@ jobs:
           ARM_SUBSCRIPTION_ID: ${{ steps.sp_creds.outputs.subscription_id }}
         run: terraform validate
 
-      # - name: Terraform Format Check
-      #   working-directory: infastructure
-      #   run: terraform fmt -check
+      - name: Terraform Format Check
+        working-directory: infastructure
+        run: terraform fmt -check
 
       # - name: Terraform Plan
       #   working-directory: infastructure
