--- a/terraform/.gitignore
+++ b/terraform/.gitignore
@@ -9,9 +9,16 @@
 crash.log
 crash.*.log
 
-# Exclude all .tfvars files, which might contain sensitive data
+# Exclude all .tfvars files with sensitive data
+# But allow environment and backend config files
 *.tfvars
 *.tfvars.json
+
+# Allow environment-specific configuration (no secrets in these)
+!dev.tfvars
+!prod.tfvars
+!staging.tfvars
+!backend-*.tfvars
 
 # Ignore override files as they are usually used to override resources locally
 override.tf
