--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -152,18 +152,18 @@ jobs:
         working-directory: infastructure
         run: terraform fmt -check
 
-      # - name: Terraform Plan
-      #   working-directory: infastructure
-      #   env:
-      #     ARM_CLIENT_ID: ${{ steps.sp_creds.outputs.client_id }}
-      #     ARM_CLIENT_SECRET: ${{ steps.sp_creds.outputs.client_secret }}
-      #     ARM_TENANT_ID: ${{ steps.sp_creds.outputs.tenant_id }}
-      #     ARM_SUBSCRIPTION_ID: ${{ steps.sp_creds.outputs.subscription_id }}
-      #   run: |
-      #     terraform plan \
-      #       -var-file="terraform.tfvars" \
-      #       -var="container_image_tag=v${{ steps.version.outputs.VERSION }}" \
-      #       -out=tfplan
+      - name: Terraform Plan
+        working-directory: infastructure
+        env:
+          ARM_CLIENT_ID: ${{ steps.sp_creds.outputs.client_id }}
+          ARM_CLIENT_SECRET: ${{ steps.sp_creds.outputs.client_secret }}
+          ARM_TENANT_ID: ${{ steps.sp_creds.outputs.tenant_id }}
+          ARM_SUBSCRIPTION_ID: ${{ steps.sp_creds.outputs.subscription_id }}
+        run: |
+          terraform plan \
+            -var-file="terraform.tfvars" \
+            -var="container_image_tag=v${{ steps.version.outputs.VERSION }}" \
+            -out=tfplan
 
       # - name: Terraform Apply
       #   working-directory: infastructure
