changed var file

--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -161,7 +161,7 @@ jobs:
           ARM_SUBSCRIPTION_ID: ${{ steps.sp_creds.outputs.subscription_id }}
         run: |
           terraform plan \
-            -var-file="terraform.tfvars" \
+            -var-file="dev.tfvars" \
             -var="container_image_tag=v${{ steps.version.outputs.VERSION }}" \
             -out=tfplan
 
