--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -163,14 +163,14 @@ jobs:
           terraform plan \
             -var-file="dev.tfvars"
 
-      # - name: Terraform Apply
-      #   working-directory: infastructure
-      #   env:
-      #     ARM_CLIENT_ID: ${{ steps.sp_creds.outputs.client_id }}
-      #     ARM_CLIENT_SECRET: ${{ steps.sp_creds.outputs.client_secret }}
-      #     ARM_TENANT_ID: ${{ steps.sp_creds.outputs.tenant_id }}
-      #     ARM_SUBSCRIPTION_ID: ${{ steps.sp_creds.outputs.subscription_id }}
-      #   run: terraform apply -auto-approve tfplan
+      - name: Terraform Apply
+        working-directory: infastructure
+        env:
+          ARM_CLIENT_ID: ${{ steps.sp_creds.outputs.client_id }}
+          ARM_CLIENT_SECRET: ${{ steps.sp_creds.outputs.client_secret }}
+          ARM_TENANT_ID: ${{ steps.sp_creds.outputs.tenant_id }}
+          ARM_SUBSCRIPTION_ID: ${{ steps.sp_creds.outputs.subscription_id }}
+        run: terraform apply -auto-approve tfplan
 
       # - name: Get Deployment Outputs
       #   working-directory: infastructure
