auto approve apply

--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -170,7 +170,7 @@ jobs:
           ARM_CLIENT_SECRET: ${{ steps.sp_creds.outputs.client_secret }}
           ARM_TENANT_ID: ${{ steps.sp_creds.outputs.tenant_id }}
           ARM_SUBSCRIPTION_ID: ${{ steps.sp_creds.outputs.subscription_id }}
-        run: terraform apply 
+        run: terraform apply -auto-apporve
 
       # - name: Get Deployment Outputs
       #   working-directory: infastructure
