--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -2,34 +2,34 @@ name: Code Quality Checks
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
   pull_request:
-    branches: [ main, develop ]
+    branches: [main, develop]
 
 jobs:
   biome:
     name: Run Biome checks
     runs-on: ubuntu-latest
-    
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-        
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
-          cache: 'npm'
-          
+          node-version: "20"
+          cache: "npm"
+
       - name: Install dependencies
         run: npm ci
-        
+
       - name: Run Biome format check
         run: npm run format:check
-        
+
       - name: Run Biome lint
         run: npm run lint
-        
+
       - name: Run Biome full check
         run: npm run check
   build-docker:
@@ -39,11 +39,11 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-        
+
       - name: Extract version
         id: version
         run: echo "VERSION=$(jq -r '.version' package.json)" >> $GITHUB_OUTPUT
-      
+
       - name: Azure login
         uses: azure/login@v2
         with:
@@ -51,7 +51,7 @@ jobs:
 
       - name: Login to ACR
         run: az acr login --name aiacademy25
-      
+
       - name: Build and push
         uses: docker/build-push-action@v6
         with:
@@ -120,7 +120,7 @@ jobs:
 
       - name: Login to ACR
         run: az acr login --name aiacademy25
-        
+
       - name: Extract version
         id: version
         run: echo "VERSION=$(jq -r '.version' package.json)" >> $GITHUB_OUTPUT
@@ -164,13 +164,14 @@ jobs:
             -var-file="dev.tfvars"
 
       - name: Terraform Apply
+        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
         working-directory: infastructure
         env:
           ARM_CLIENT_ID: ${{ steps.sp_creds.outputs.client_id }}
           ARM_CLIENT_SECRET: ${{ steps.sp_creds.outputs.client_secret }}
           ARM_TENANT_ID: ${{ steps.sp_creds.outputs.tenant_id }}
           ARM_SUBSCRIPTION_ID: ${{ steps.sp_creds.outputs.subscription_id }}
-        run: terraform apply -auto-approve
+        run: terraform apply -var-file="dev.tfvars" -auto-approve
 
       # - name: Get Deployment Outputs
       #   working-directory: infastructure
